# RedGB

./: .gitignore  Cargo.toml  README.md
assets/: icon.icns
src/: bus.rs  emulator.rs  error.rs  lib.rs  main.rs  mbc.rs
src/apu/: apu.rs  buffer.rs  channel.rs  mod.rs  pulse.rs  wave.rs
src/cpu/: alu.rs  clock.rs  cpu_context.rs  input.rs  mod.rs  operands.rs  reg_file.rs  sm83.rs  timer.rs
src/cpu/handlers/: arithmetic.rs  arithmetic_16.rs  bitwise.rs  jumps.rs  loads.rs  loads_16.rs  mod.rs
src/mbc/: mbc1.rs  mbc2.rs  mbc3.rs
src/mem/: map.rs
src/ppu/: fetcher.rs  mod.rs  ppu.rs  ppumode.rs  sprite.rs
src/rom/: rom_info.rs  rom_parser.rs
tests/: arithmetic_tests.rs  load_tests.rs
