[package]
name = "redgb"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
sdl3 = "0.17.3"
log = "0.4.29"
env_logger = "0.11.9"
rfd = "0.17.2"
ringbuf = "0.4.8"
winres = "0.1.12"
dirs = "6.0.0"

[package.metadata.bundle]
name = "RedGB"
identifier = "com.copticfelo.redgb"
icon = ["assets/icon.ico", "assets/icon.icns", "assets/icon.png", "assets/icon_1024@2x.png"]
version = "0.0.3"
category = "public.app-category.games"
short_description = "A simple DMG Gameboy emulator"
osx_frameworks = ["SDL3"]
deb_depends = ["libsdl3"]
